Updated some tests