@@ -7,7 +7,6 @@ import javax.inject.Inject;
 import javax.inject.Singleton;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Singleton
 public class SearchService {
@@ -23,7 +22,7 @@ public class SearchService {
         // Providing an ordering by price (ASC) as a default sorting
         return adsDao.findByParams(text, priceFrom, priceTo).stream()
                 .sorted(Comparator.comparing(Ad::getPrice, Comparator.nullsLast(Comparator.naturalOrder())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
